--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1713,107 +1713,107 @@ stories:
   domain: http://www.bdemo.com/
   link: https://www.bdemo.com/online_features/senior_living/how-to-throw-an-unforgettable-holiday-party/article_40b1967c-badc-52db-8f2d-c9cb479b0690.html
 images:
-- name: legal-statue-legalstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-brush.jpg
-- name: copper-circuit-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway.jpg
-- name: nazi-invasion-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-black-cab-street.jpg
-- name: oldcabin-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-yellow-paper.jpg
-- name: crow_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_color.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: dc-statue-dcstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-brush.jpg
-- name: oldhotel-oldhotel-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-internet-numbers.jpg
-- name: dc-statue-dcstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crafty-painting.jpg
-- name: beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
-- name: adam-smith-adam-smith-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
-- name: abe-lincoln-one-wols-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-07-91.jpg
-- name: power-lines-power-lines-empty-space-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-spagetti-accident.jpg
-- name: gypsymosaic-gypsy-eyes-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-rainbow-festival.jpg
-- name: carry-load-carryload-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-diego-rivera1.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
-- name: server-cloud-server-racks-door-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
-- name: stories-new-75-125-800-500-0-max-0-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-75-125-800-500-0-max-0-1-1.jpg
-- name: castle-wall-DSC-0067-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-hot-spicy.JPG
-- name: curtain-curtain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-circuit.jpg
-- name: copper-circuit-statue-staring-down-to-right.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-staring-down-to-right.jpg
-- name: catacombs-catacombs-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-cinnamon-rolls.jpg
-- name: oldsmallboat-oldsmallboat-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sunday.jpg
-- name: birdhouse-birdhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: hollywood-building-hollywood-building-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colorful-blocks.jpg
-- name: mistywoods-babyfoot-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crunch-paper.jpg
-- name: crow_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dry_skin.jpg
-- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-- name: subway-subway-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
-- name: catacombs-catacombs-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-- name: dragon-desert-desert-dragon-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dry-skin.jpg
-- name: stories-beach-rocks-currents-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-feed-people.jpg
-- name: walled-garden-walled-garden-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-color.jpg
-- name: oldroad-old-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: old-barn-old-barn-1500-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-circuit.jpg
-- name: white-house-lawn-white-house-lawn-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-rainbow-festival.jpg
-- name: lincoln-memorial-lincolnmemorial-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-missle.jpg
-- name: old-door-lock-old-door-lock-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-nazi-poster.jpg
-- name: fence-mexico-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
-- name: aws-s3-royalroads-royalroads-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
-- name: old-cabin-oldcabin-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dry-skin.jpg
-- name: old-school-house-old-schoolhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
-- name: oldcabin-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
-- name: oldroad-old-road-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-granite.jpg
+- name: sand-hand-sand-hand-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
+- name: school-clouds-church-clouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alien-goggles.jpg
+- name: death-valley-death-valley-national-park-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
+- name: birdhouse-birdhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-circuit.jpg
+- name: copper-circuit-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-new-york-city-skyline_36655833162_o.jpg
+- name: walled-garden-walled-garden-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-nazi-poster.jpg
+- name: paris-paris-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-dresden.jpg
+- name: ellis-island-ellis-island-room-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-dream.jpg
+- name: copper-circuit-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line-2.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+- name: razorwire-DSC-0080-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-three.jpg
+- name: powerlines-power-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
+- name: store-on-corner-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
+- name: docks-docks-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
+- name: old-church-oldchurch-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alien-goggles.jpg
+- name: la-muse-nyc-skyline-from-ferry.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-skyline-from-ferry.jpg
+- name: bf-skinner-vancouver-waterfront_36556357642_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-vancouver-waterfront_36556357642_o.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+- name: nazi-invasion-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-flowers-diamon-creek.jpg
+- name: liberty-back-statue-liberty-back-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crabapple.jpg
+- name: server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-blue-circuit.jpg
+- name: white-house-whitehouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crabapple.jpg
+- name: udnie-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
+- name: crow_crafty_painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crafty_painting.jpg
+- name: nazi-invasion-city-clouds-building-crowded.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-clouds-building-crowded.jpg
+- name: school-clouds-church-clouds-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-horiz-circuit.jpg
+- name: downtheline-downtheline-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-matrix.jpg
+- name: yosemite-yosemite-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
+- name: razorwire-DSC-0080-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
+- name: oldroad-old-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-asteroids.jpg
+- name: server-cloud-server-racks-clouds-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-attack-planes.jpg
+- name: downtheline-downtheline-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-bright-sand.jpg
+- name: old-granary-field-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
+- name: stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
+- name: downtheline-downtheline-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
+- name: crow-crow-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-color.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+- name: fence-fence-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-post-modern.jpg
+- name: stalin-time-supreme-court_36341562380_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-supreme-court_36341562380_o.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
+- name: aws-s3-square-C2plAIxWIAAOSdD.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2plAIxWIAAOSdD.jpg
+- name: file-00-00-21-82.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-21-82.jpg
+- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
+- name: eduardo-eduardo-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-oily-mcoilface.jpg
+- name: bf-skinner-sailboat-in-front-of-housing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sailboat-in-front-of-housing.jpg
+- name: docks-docks-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
+- name: birdhouse-birdhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-smooth-ride.jpg
+- name: mistywoods-babyfoot-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-color.jpg
 ---
 Villafranca Continues Golf Career Close To Home.&nbsp;Jack Coan's Roots In Lacrosse Serve Him Well As Badgers' Quarterback.&nbsp;Biggest Movies Of The 2010's.&nbsp;Renovating Your Kitchen What You Should Do?.&nbsp;Steamboat Man Earns PhD From Mines Two Decades After Surviving Cancer.&nbsp;Credits Way To Recoup Value.&nbsp;Tillamook County Partners Complete Opioid Use Needs Assessment.&nbsp;Bricks To Be Sold For Park.&nbsp;
